[gd_scene load_steps=10 format=3 uid="uid://bl42060ous4rs"]

[ext_resource type="Script" path="res://project/menus/main_menu.gd" id="1_dqhtc"]
[ext_resource type="Texture2D" uid="uid://cblvulfyqsl8w" path="res://project/GameManager/background.png" id="1_gqtl1"]
[ext_resource type="Texture2D" uid="uid://c2c7i7ivx6qgq" path="res://project/menus/title.png" id="2_pk4c7"]
[ext_resource type="FontFile" uid="uid://rcj2rq8sxetw" path="res://project/font.ttf" id="3_novtx"]
[ext_resource type="Texture2D" uid="uid://bb0c7abh58qk0" path="res://project/menus/menu_button_up.png" id="4_fkjyr"]
[ext_resource type="Texture2D" uid="uid://dmox73k7gq88q" path="res://project/menus/menu_button_down.png" id="5_hox4o"]
[ext_resource type="AudioStream" uid="uid://xq28fvum4an2" path="res://project/audio/click.wav" id="7_ux2yg"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_rofdx"]
texture = ExtResource("1_gqtl1")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0

[sub_resource type="TileSet" id="TileSet_oqtky"]
sources/0 = SubResource("TileSetAtlasSource_rofdx")

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_dqhtc")

[node name="Background" type="TileMap" parent="."]
scale = Vector2(3, 3)
tile_set = SubResource("TileSet_oqtky")
format = 2
layer_0/tile_data = PackedInt32Array(8, 131072, 2, 7, 65536, 0, 6, 65536, 0, 5, 65536, 0, 4, 65536, 0, 3, 65536, 0, 2, 65536, 0, 1, 65536, 0, 0, 65536, 0, 983048, 65536, 2, 983040, 0, 2, 65544, 0, 0, 131080, 0, 0, 196616, 0, 0, 262152, 0, 0, 327688, 0, 0, 393224, 0, 0, 458760, 0, 0, 524296, 0, 0, 589832, 0, 0, 655368, 0, 0, 720904, 0, 0, 786440, 0, 0, 851976, 0, 0, 917512, 0, 0, 65536, 131072, 0, 131072, 131072, 0, 196608, 131072, 0, 262144, 131072, 0, 327680, 131072, 0, 393216, 131072, 0, 458752, 131072, 0, 524288, 131072, 0, 589824, 131072, 0, 655360, 131072, 0, 720896, 131072, 0, 786432, 131072, 0, 851968, 131072, 0, 917504, 131072, 0, 983041, 0, 1, 983042, 0, 1, 983043, 0, 1, 983044, 0, 1, 983045, 0, 1, 983046, 0, 1, 983047, 0, 1, 786435, 65536, 1, 720899, 0, 1, 655363, 65536, 0, 589827, 65536, 1, 524291, 65536, 1, 458755, 0, 1, 393219, 131072, 1, 327683, 65536, 0, 262147, 65536, 1, 196611, 65536, 1, 131075, 65536, 1, 65539, 0, 1, 65538, 0, 1, 65537, 0, 1, 131073, 65536, 1, 196609, 65536, 1, 262145, 65536, 1, 327681, 65536, 0, 393217, 131072, 1, 458753, 131072, 1, 524289, 0, 0, 589825, 0, 0, 655361, 131072, 1, 720897, 131072, 1, 786433, 0, 0, 851969, 0, 0, 917505, 131072, 1, 917506, 65536, 0, 851970, 65536, 1, 786434, 65536, 1, 720898, 0, 1, 655362, 65536, 0, 589826, 65536, 1, 524290, 65536, 1, 458754, 0, 1, 393218, 131072, 1, 327682, 65536, 0, 262146, 65536, 1, 196610, 65536, 1, 131074, 65536, 1, 851971, 65536, 1, 917507, 65536, 0, 917508, 65536, 0, 851972, 65536, 1, 786436, 65536, 1, 720900, 0, 1, 655364, 65536, 0, 589828, 65536, 1, 524292, 65536, 1, 458756, 0, 1, 393220, 131072, 1, 327684, 65536, 0, 262148, 65536, 1, 196612, 65536, 1, 131076, 65536, 1, 65540, 0, 1, 65541, 0, 1, 131077, 65536, 1, 196613, 65536, 1, 262149, 65536, 1, 327685, 65536, 0, 393221, 131072, 1, 458757, 0, 1, 524293, 65536, 1, 589829, 65536, 1, 655365, 65536, 0, 720901, 0, 1, 786437, 65536, 1, 851973, 65536, 1, 917509, 65536, 0, 917510, 65536, 0, 851974, 65536, 1, 786438, 65536, 1, 720902, 0, 1, 655366, 65536, 0, 589830, 65536, 1, 524294, 65536, 1, 458758, 0, 1, 393222, 131072, 1, 327686, 65536, 0, 262150, 65536, 1, 196614, 65536, 1, 131078, 65536, 1, 65542, 0, 1, 65543, 0, 1, 131079, 65536, 1, 196615, 65536, 1, 262151, 65536, 1, 327687, 65536, 0, 393223, 131072, 1, 458759, 131072, 1, 524295, 131072, 0, 589831, 131072, 0, 655367, 131072, 1, 720903, 131072, 1, 786439, 131072, 0, 851975, 131072, 0, 917511, 131072, 1)

[node name="Title" type="TextureRect" parent="."]
offset_left = 57.0
offset_top = 96.0
offset_right = 375.0
offset_bottom = 242.0
texture = ExtResource("2_pk4c7")

[node name="Credits" type="Label" parent="."]
offset_left = 138.0
offset_top = 724.0
offset_right = 417.0
offset_bottom = 754.0
theme_override_colors/font_color = Color(1, 0.988235, 0.87451, 1)
theme_override_fonts/font = ExtResource("3_novtx")
theme_override_font_sizes/font_size = 24
text = "A game by Caengal"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_ux2yg")
volume_db = 24.0

[node name="Buttons" type="Node2D" parent="."]

[node name="StartButton" type="TextureButton" parent="Buttons"]
offset_left = 108.0
offset_top = 575.0
offset_right = 214.0
offset_bottom = 624.0
scale = Vector2(2, 2)
texture_normal = ExtResource("4_fkjyr")
texture_pressed = ExtResource("5_hox4o")

[node name="StartLabel" type="Label" parent="Buttons/StartButton"]
layout_mode = 0
offset_left = 19.5
offset_top = 2.0
offset_right = 88.5
offset_bottom = 50.0
theme_override_fonts/font = ExtResource("3_novtx")
text = "Start
Game"
horizontal_alignment = 1

[node name="HowToButton" type="TextureButton" parent="Buttons"]
offset_left = 111.0
offset_top = 383.0
offset_right = 217.0
offset_bottom = 432.0
scale = Vector2(2, 2)
texture_normal = ExtResource("4_fkjyr")
texture_pressed = ExtResource("5_hox4o")

[node name="HowToLabel" type="Label" parent="Buttons/HowToButton"]
layout_mode = 0
offset_left = 19.5
offset_top = 3.0
offset_right = 85.5
offset_bottom = 46.0
theme_override_fonts/font = ExtResource("3_novtx")
text = "How to
Play"
horizontal_alignment = 1
